--- a/src/components/ConfettiWrapper.astro
+++ b/src/components/ConfettiWrapper.astro
@@ -11,12 +11,13 @@
                 if (entry.isIntersecting) {
                     // When the target div is in view, trigger confetti
                     triggerConfetti();
+                    console.log('entry', entry);
                     // Disconnect the observer after triggering confetti
                     observer.disconnect();
                 }
             });
         },
-        { threshold: 1.0 }
+        { threshold: 0.75 }
     );
     function triggerConfetti() {
         confetti({
@@ -25,6 +26,7 @@
             spread: 100,
         });
     }
+
     const trigger = document.querySelector(
         '.confetti-trigger'
     ) as HTMLDivElement;
