--- a/src/pages/likes.astro
+++ b/src/pages/likes.astro
@@ -32,7 +32,7 @@ const username = user.username;
         }
     </table>
     <form action="/api/logout" method="POST">
-        <button>Sign Out</button>
+        <button class="button">Sign Out</button>
     </form>
 </MainFlow>
 
