--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -12,9 +12,6 @@ import MainFlow from '@layouts/MainFlow.astro';
         <input type="text" id="username" name="username" />
         <label for="password">Password</label>
         <input type="password" name="password" id="password" />
-        <button
-            class="bg-black text-white dark:bg-white dark:text-black rounded col-span-2"
-            >Continue</button
-        >
+        <button class="button col-span-2">Continue</button>
     </form>
 </MainFlow>
