--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -187,3 +187,17 @@ article li li {
     white-space: nowrap;
     width: 1px;
 }
+
+button {
+    background: black;
+    color: white;
+    border-radius: 0.25rem;
+    padding: 0.25rem 0.5rem;
+}
+
+@media (prefers-color-scheme: dark) {
+    button {
+        background: white;
+        color: black;
+    }
+}
