--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -1,5 +1,6 @@
 ---
 import DisplayTags from '@components/DisplayTags.astro';
+import LikeButton from '@components/LikeButton.svelte';
 import TOC from '@components/TOC.astro';
 import Base from '@layouts/Base.astro';
 
@@ -18,6 +19,7 @@ const { headings } = await project.render();
                 </div>
                 <slot />
             </article>
+            <LikeButton client:only="svelte" url={Astro.url.pathname} />
             <nav class="project-nav">
                 <a href="/projects/">Back to Projects</a>
             </nav>
