Quail refactors, feed rename, quail post changes

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -21,13 +21,13 @@ const description = propsDescription ? propsDescription : metadata.description;
         <link rel="sitemap" href="/sitemap-index.xml" />
         <link
             rel="alternate"
-            href="/feed/rss.xml"
+            href="/feed/feed.xml"
             type="application/atom+xml"
         />
+        <link rel="alternate" href="/feed/feed.json" type="application/json" />
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
         <meta name="description" content={description} />
         <title>{title}</title>
-        <!-- TODO -->
 
         <!-- Open Graph -->
         <meta property="og:type" content="website" />
