--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -49,7 +49,7 @@ const description = propsDescription ? propsDescription : metadata.description;
             defer
             src="https://plausible.parkerdavis.dev/js/script.js"
             onload="this.setAttribute('data-domain',window.location.host)"
-        ></script>
+            is:inline></script>
     </head>
     <body>
         <Header />
