--- a/src/components/PostListing.astro
+++ b/src/components/PostListing.astro
@@ -1,7 +1,7 @@
 ---
-import dayjs from 'dayjs';
+import dayjs from '@utils/dayjs';
 const { post } = Astro.props;
-const readableDate = dayjs(post.data.date).format('DD MMM YYYY');
+const readableDate = dayjs(post.data.date).utc().format('DD MMM YYYY');
 let link = post.bms ? post.data.slug : `/blog/${post.slug}`;
 ---
 
