--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -12,6 +12,23 @@ const description = propsDescription ? propsDescription : metadata.description;
 ---
 
 <!doctype html>
+<!--
+                ,=.
+                )  \
+               /  . \
+              |   \_/|
+               \     /\
+                |   | |
+                |   | |
+                |   | |
+                |   | |
+                |   | |
+                |   | |
+                \   | |
+                 \  | |
+                  \ | |
+                   \|_| "Gambel's Quail Obelisk"
+    -->
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
