Added related posts for projects, include BMS

--- a/src/components/PostListing.astro
+++ b/src/components/PostListing.astro
@@ -27,7 +27,7 @@ let link = post.bms ? post.data.slug : `/blog/${post.slug}`;
     li {
         display: grid;
         grid-template-rows: auto;
-        grid-template-columns: [time-start] 8em [time-end title-start] auto [title-end bms-start] auto [bms-end];
+        grid-template-columns: [time-start] auto [time-end title-start] auto [title-end bms-start] auto [bms-end];
         justify-content: start;
         align-items: baseline;
         margin-bottom: 1em;
