--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -1,6 +1,7 @@
 ---
 import DisplayTags from '@components/DisplayTags.astro';
 import LikeButton from '@components/LikeButton.svelte';
+import RelatedPosts from '@components/RelatedPosts.astro';
 import TOC from '@components/TOC.astro';
 import Base from '@layouts/Base.astro';
 
