Fix comment notification endpoint

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ const nav = [
         >{metadata.title}</a
     >
 
-    <div class="icon">
+    <div class="icon" style="max-width: 6rem">
         <Icon icon="btsp" />
     </div>
 
