--- a/src/components/Spacer.astro
+++ b/src/components/Spacer.astro
@@ -1,9 +1,35 @@
-<!-- <hr /> -->
-<div></div>
+---
+const { className } = Astro.props;
+---
+
+<!-- <div></div>
 
 <style>
     hr,
     div {
         margin-block: 2em;
+    }
+</style> -->
+<hr class={className} />
+
+<style>
+    hr {
+        border: none;
+        border-top: 1px solid var(--text-color);
+        color: var(--text-color);
+        overflow: visible;
+        text-align: center;
+        height: 5px;
+        margin-block: 4em;
+        width: 50%;
+        margin-inline: auto;
+    }
+
+    hr::after {
+        background: var(--background-color);
+        content: '§';
+        padding: 0 4px;
+        position: relative;
+        top: -14px;
     }
 </style>
