--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+@view-transition {
+    navigation: auto;
+}
+
+/* header {
+    view-transition-name: header;
+} */
+
 :root {
     color-scheme: light dark;
 
