--- a/src/components/Spacer.astro
+++ b/src/components/Spacer.astro
@@ -15,13 +15,15 @@ const { className } = Astro.props;
 <style>
     hr {
         border: none;
-        border-top: 1px solid var(--text-color);
+        border-top: 1px dashed var(--text-color);
         color: var(--text-color);
         overflow: visible;
         text-align: center;
         height: 5px;
         margin-block: 4em;
-        width: 50%;
+        /* width: 50%; */
+        width: 14em;
+        max-width: 100%;
         margin-inline: auto;
     }
 
