--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -14,11 +14,11 @@ import SaltRiver from './saltriver.jpg';
         I'm a web developer from Arizona who loves identifying and solving the
         many small puzzles that build towards big picture solutions. I
         specialize in creating lean performant full stack web applications and
-        websites with an eye toward UX.
+        websites with an eye toward user experience.
     </p>
     <p>
-        My freelancing company <a href="https://brantaweb.com">Branta Web</a> has
-        helped researchers, artists, and professionals improve their online presence.
+        My freelancing company Branta Web has helped researchers, artists, and
+        professionals improve their online presence.
     </p>
     <p>
         Get in touch with me at <a
