--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -11,14 +11,14 @@ import SaltRiver from './saltriver.jpg';
         <Image src={SaltRiver} alt="Parker recording swans on the Salt River" />
     </div>
     <p>
-        I'm a web developer from Arizona who loves identifying and solving the
-        many small puzzles that build towards big picture solutions. I
-        specialize in creating lean performant full stack web applications and
-        websites with an eye toward user experience.
+        I'm a web developer, biologist, musician, and sound enthusiast from
+        Arizona.
     </p>
     <p>
-        My freelancing company Branta Web has helped researchers, artists, and
-        professionals improve their online presence.
+        I specialize in creating lean performant full stack web applications and
+        websites with an eye toward user experience. My freelancing company
+        Branta Web has helped researchers, artists, and professionals improve
+        their online presence.
     </p>
     <p>
         Get in touch with me at <a
