Minor edit, trigger db update

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -11,8 +11,8 @@ import SaltRiver from './saltriver.jpg';
         <Image src={SaltRiver} alt="Parker recording swans on the Salt River" />
     </div>
     <p>
-        I'm a web developer, biologist, musician, and sound enthusiast from
-        Arizona.
+        I'm a web developer, field biologist, musician, and sound enthusiast
+        from Arizona.
     </p>
     <p>
         I specialize in creating lean performant full stack web applications and
