--- a/src/pages/rss.astro
+++ b/src/pages/rss.astro
@@ -9,13 +9,15 @@ import MainFlow from '@layouts/MainFlow.astro';
         Get notified of new posts without cluttering up your email inbox or
         logging onto terrible social media sites <em>with RSS!</em>
     </p>
-    <p><a href="https://aboutfeeds.com/">About Feeds</a></p>
 
     <h2>RSS Feeds</h2>
     <ul>
         <li><a href="/feed/feed.xml">RSS Feed</a></li>
         <li><a href="/feed/feed.json">JSON Feed</a></li>
     </ul>
+
+    <h2>What is RSS?</h2>
+    <p><a href="https://aboutfeeds.com/">About Feeds</a></p>
 
     <h2>Start your own blog!</h2>
     <p><a href="https://bearblog.dev/">Bear Blog</a> seems nice.</p>
